ChangeLog
=========

Release: 1.3.3
===============================================================================
2022-07-14 Added a new progress dialog to show the progress of a file download.

2022-07-13 Upgrade for latest Skia library

2022-07-01 Added a mechanism to redraw a button internally only if it was
           changed.

2022-06-01 Fixed the colors of the chameleon images.

Release: 1.3.2
===============================================================================
2022-05-31 Changed the commands arrived from a Netlinx to go into a command
           queue which is now handled in a thread of it's own.
           Fixed the text parts of the ^BMF command to replace a "|" sign with
           a LF (0x0a).

2022-05-30 Changed the writing to Netlinx into a thread so that it now reads
           and writes really asynchronous.

2022-05-27 Fixed several index bugs triggered by the ^BMF command.
           Changed the image cache to a global one and removed the small one
           inside the button class. This saves a lot of memory and speeds up.

2022-05-26 Fixed multi line text to not cut off the last character and to leave
           an empty line as such.
           Improved the drawing of chameleon images a bit.

2022-05-25 Fixed the chameleon images if the bitmap has a different size.
           Fixed buttons with functions to not show state 1 when pressed.

2022-05-22 Addedd text effects for Glow and Outline.
           Fixed the border drawing.
           Fixed the position of symbols from a symbol font.

2022-05-20 Changed the borders to take the normal borders on instance 0 and the
           alpha border on instance 1.

2022-05-17 Fixed the look and size of the settings dialog.
           Fixed loading of a font which is not loadable by loading a
           default font instead.

2022-05-16 Fixed a bug in UTF8 to UTF16 conversion who let TPanel crash.
           Fixed the way fonts are loaded. Skia allows to load a font only