@@ -82,8 +82,8 @@ void TqDownload::doResize()
 
     for (iter = childs.begin(); iter != childs.end(); ++iter)
     {
-        QString name = iter.i->t()->objectName();
-        QObject *obj = iter.i->t();
+        QObject *obj = *iter;
+        QString name = obj->objectName();
 
         if (name.startsWith("progressBar"))
         {
