@@ -17,7 +17,12 @@
  */
 
 #include <QPushButton>
+#ifdef QT5_LINUX
 #include <QSound>
+#else
+#include <QMediaPlayer>
+#include <QAudioOutput>
+#endif
 
 #include "tqkeyboard.h"
 #include "ui_keyboard.h"
@@ -241,7 +246,18 @@ void TQKeyboard::setKey(Ui::KEYS_t key)
     {
         std::string snd = getTouchFeedbackSound();
         MSG_DEBUG("Playing sound: " << snd);
+#ifdef QT6_LINUX
+        QMediaPlayer *player = new QMediaPlayer;
+        QAudioOutput *audioOutput = new QAudioOutput;
+        player->setAudioOutput(audioOutput);
+        // ...
+        player->setSource(QUrl::fromLocalFile(snd.c_str()));
+        player->play();
+        delete player;
+        delete audioOutput;
+#else
         QSound::play(snd.c_str());
+#endif
     }
 
     if (gPageManager && gPageManager->getPassThrough() && !mText.empty() &&
