@@ -68,8 +68,8 @@ void TQBusy::doResize()
 
     for (iter = childs.begin(); iter != childs.end(); ++iter)
     {
-        QString name = iter.i->t()->objectName();
-        QObject *obj = iter.i->t();
+        QObject *obj = *iter;
+        QString name = obj->objectName();
 
         if (name.startsWith("quick"))
         {
