@@ -275,8 +275,8 @@ void TQtPhone::doResize()
 
     for (iter = childs.begin(); iter != childs.end(); ++iter)
     {
-        QString name = iter.i->t()->objectName();
-        QObject *obj = iter.i->t();
+        QObject *obj = *iter;
+        QString name = obj->objectName();
 
         if (name.startsWith("toolButton"))
             scaleObject(dynamic_cast<QToolButton *>(obj));
