@@ -3,6 +3,8 @@ ChangeLog
 
 Release: 1.3.3
 ===============================================================================
+2022-07-18 Changed source for Qt6.3 library (Qt5 is still supported).
+
 2022-07-14 Added a new progress dialog to show the progress of a file download.
 
 2022-07-13 Upgrade for latest Skia library
